Fix issues in specialties APIs.